2002-11-12  Masatake YAMATO  <yamato@redhat.com>

	* strgicmp.c (strgnicmp): Fix a typo.

2002-11-10  Martin Weber <martweb@gmx.net>

	* strgicmp.c (strgnicmp): Use size_t instead of
	  long to avoid warnings from compilers.

	Message-ID: <3DCCD9C3.9737E7C4@gmx.net>.

2002-11-09  Masatake YAMATO  <yamato@redhat.com>

	* autotrace.h (at_doc__width_weight_factor): Updated.

2002-11-09  Masatake YAMATO  <yamato@redhat.com>

	* configure.in: version 0.31.1.
	echo building configuration at the
	end of configure.

2002-11-09  Masatake YAMATO  <yamato@redhat.com>

	* autotrace.h: Don't define _().

	* configure.in: LT_CURRENT=3.
	See my change at 2002-10-31.

2002-11-09 Martin Weber <martweb@gmx.net>

	* output-dr2d.c (BuildDRHD::FloatAsIEEEBytes): 
	Change the position where the datum is written.

	Message-ID: <3DCBECAB.6198C58D@gmx.net>.

2002-11-09 Martin Weber <martweb@gmx.net>

	* output-dxf.c (output_layer): move the
	declaration of last_color to the out of loop.

	Message-ID: <3DCBC646.8B714DA2@gmx.net>.

2002-11-09 Martin Weber <martweb@gmx.net>

	* pxl-outline.c (find_one_centerline): search_dir,
	an argument, is now actual value, not a pointer.
	(*): passed a value to find_one_centerline at
	the function argument, search_dir.
	(*): fix a broken log fromat string.

	Message-ID: <3DCBBBC9.A3F8985E@gmx.net>.

2002-11-08 Martin Weber <martweb@gmx.net>

	* pxl-outline.c: Big changes again that fix a bug 
	related to centerline tracing. NOTE: A bug is still existed.

	Message-ID: <3DCAAAD7.F55305EA@gmx.net>.

2002-11-07  Martin Weber <martweb@gmx.net>

	* filename.c: Removed some 64 and 128 bit problems.
	* input.c: ditto.
	* output-cgm.c: ditto.
	* output-emf.c: ditto.
	* output-pdf.c: ditto.
	* output.c: ditto.
	* strgicmp.c: ditto.
	* strgicmp.h: ditto.

	Message-ID: <3DC96244.A37B85BB@gmx.net>.

2002-11-07  Masatake YAMATO  <yamato@redhat.com>

	* spline.[ch]: Removed unused ifdefs.

2002-11-04  Martin Weber <martweb@gmx.net>
